# systemd-manager

./: Cargo.toml  LICENSE  Makefile  README.md  index.html  params.json
assets/: systemd-manager.desktop
debian/DEBIAN/: control  copyright
src/: interface.glade  main.rs  systemd.rs  systemd_gui.rs
src/gui/gtk3/: analyze.rs  button_layout.rs  interface.glade  mod.rs  units.rs
src/lib/: dbus_interface.rs  mod.rs  unit.rs  units.rs
src/lib/systemd/: dbus_interface.rs  mod.rs
src/systemd/: analyze.rs  dbus.rs  mod.rs  systemctl.rs
src/ui/: app.rs  header.rs  mod.rs
src/ui/content/: mod.rs  units.rs
src/ui/dialogs/: error.rs  mod.rs
stylesheets/: stylesheet.css
