[package]
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "A GTK3 GUI for managing systemd services on Linux"
keywords = [
    "gtk",
    "linux",
    "systemd",
]
license = "MIT"
name = "systemd-manager"
readme = "README.md"
repository = "https://github.com/mmstick/systemd-manager"
version = "1.1.0"

[dependencies]
horrorshow = "0.6.2"
pango = "0.2.0"
quickersort = "3.0.0"
webkit2gtk = "0.2.2"

[dependencies.gdk]
version = "0.6"

[dependencies.sourceview]
features = ["v3_18"]
version = "0.2"

[dependencies.gtk]
features = ["v3_18"]
version = "0.2"
