[package]
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "A GTK3 GUI for managing systemd services on Linux"
keywords = [
    "gtk",
    "linux",
    "systemd",
]
license = "MIT"
name = "systemd-manager"
readme = "README.md"
repository = "https://github.com/mmstick/systemd-manager"
version = "1.1.0"

[lib]
path = "src/lib/mod.rs"

[dependencies]
dbus = "0.6.0"
failure = "0.1.1"
failure_derive = "0.1.1"
horrorshow = "0.6.2"
pango = "0.2.0"
quickersort = "3.0.0"

[dependencies.gdk]
version = "0.6"

[dependencies.gtk]
features = ["v3_18"]
version = "0.2"

[dependencies.sourceview]
features = ["v3_18"]
version = "0.2"
